<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/lyt_hdr"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_Ht">

    </include>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_Heading"
        style="@style/style_LgHeder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/header_Ht"
        android:gravity="center"
        android:text="@string/reg_Heading" />

    <ScrollView
        android:id="@+id/scroll_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_Heading"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/log_Mr"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edtTxt_EmpID"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:hint="@string/reg_Emp_ID" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_UserId"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:hint="@string/reg_User_ID" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_Name"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:hint="@string/reg_Name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_Pwd"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:hint="@string/reg_PWD"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_MobNumber"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:hint="@string/reg_Mobile"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_EmailId"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:hint="@string/reg_Email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edtbg">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_Dist"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_Ht"
                    app:hintText="@string/reg_Dist"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edtbg">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_PS"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_Ht"
                    app:hintText="@string/reg_PS"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edtbg">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_Rank"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_Ht"
                    app:hintText="@string/reg_Rank"

                    />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imgBt_Reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/submit"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/reg_txt_Login"
                android:textSize="@dimen/log_FRegFont"
                android:textColor="@color/headerBG_clr"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="400dp" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>