<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/lyt_hdr"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_Ht">

    </include>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_Heading"
        style="@style/style_LgHeder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/header_Ht"
        android:gravity="center"
        android:text="@string/settings_Hed" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_Heading"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <android.support.v7.widget.AppCompatTextView
                style="@style/style_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_PS" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Spinr_PsName"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_Ht"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/select_PS" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_Point" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Spinr_PointName"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_Ht"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/select_Point" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_Res_PS" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Spinr_PsResName"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_Ht"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/select_Res_PS" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluth_Confg_txt" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_scanBT"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_Ht"
                android:layout_margin="10dp"
                android:background="@drawable/btnspinrbg"
                android:text="@string/txt_scanBT" />

            <ListView
                android:id="@+id/list_scanBT"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                tools:ignore="NestedScrolling">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_margin="10dp">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_TextView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:layout_weight="1"
                    android:text="@string/txt_BTAdres" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_Txt_BTAdres"
                    style="@style/style_EditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edtTxt_Ht"
                    android:layout_weight="1" />

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Set_Save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_Ht"
                android:layout_margin="20dp"
                android:background="@color/headerBG_clr"
                android:text="SAVE"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="400dp" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>