<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_clr"
    tools:context=".activities.DDSecondActivity">

    <include
        android:id="@+id/lyt_hdr"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_Ht">

    </include>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_hdngSpot"
        style="@style/style_LgHeder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyt_hdr"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/drunk_drive" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_hdngSpot"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/inpt_lytHt"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_Txt_Date"
                    style="@style/style_EditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/inpt_lytHt"
                    android:layout_weight="1.50"
                    android:hint="@string/txt_DateFrmt"
                    android:inputType="date" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img_DD_Date"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/inpt_lytHt"
                    android:layout_weight="0.40"
                    android:src="@drawable/calender"
                    tools:ignore="ContentDescription" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_TxtHedForm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_Txt_Time"
                    style="@style/style_EditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/inpt_lytHt"
                    android:layout_weight="1.50"
                    android:hint="@string/txt_DateFrmt"
                    android:inputType="date" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img_DD_Time"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/inpt_lytHt"
                    android:layout_weight="0.40"
                    android:src="@drawable/calender"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/breath_analyzer" />

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/inpt_lytHt"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_Breath_SerialNo"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/log_et_Ht"
                    android:hint="@string/enter_breath_analyzer_serial_no"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/inpt_lytHt"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_Alcohol_Reading"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/log_et_Ht"
                    android:hint="@string/enter_alcohol_reading"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    style="@style/style_InputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/inpt_lytHt"
                    android:layout_weight="0.8">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtTxt_Mobile_No"
                        style="@style/style_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/log_et_Ht"
                        android:hint="@string/mobile_number"
                        android:maxLength="10"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_SendOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_Ht"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/button_border_style"
                    android:text="@string/send_otp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:weightSum="1">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_DDCancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_Ht"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btnbg"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_DDSubmit"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_Ht"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btnbg"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>